[SW-1963] Fix execution of tests using local-cluster (#1852)

--- a/jenkins/build.gradle
+++ b/jenkins/build.gradle
@@ -32,6 +32,7 @@ task createDockerfile(type: Dockerfile) {
                 R -e 'install.packages("testthat", repos = "http://cran.us.r-project.org")' && \\
                 R -e 'install.packages("sparklyr", repos = "http://cran.us.r-project.org")'
                 """
+    user("jenkins")
     getAllFullSparkVersions().each { version ->
         runCommand """\\
                     cd /home/jenkins && \\
@@ -45,7 +46,6 @@ task createDockerfile(type: Dockerfile) {
         def second = version.split("\\.")[1]
         environmentVariable("SPARK_HOME_${first}_${second}", "/home/jenkins/spark-${version}-bin-hadoop2.7")
     }
-    user("jenkins")
     runCommand """\\
                 cd /home/jenkins && \\
                 git clone https://github.com/h2oai/sparkling-water.git && \\
@@ -79,13 +79,11 @@ task createDockerfile(type: Dockerfile) {
                 """
     environmentVariable("PATH", "\"/home/jenkins/miniconda/bin:\${PATH}\"")
     runCommand """\\
-                sudo env "PATH=\$PATH" conda install anaconda anaconda-client conda-build -y && \\
-                sudo env "PATH=\$PATH" conda update conda -y && \\
-                sudo env "PATH=\$PATH" conda update anaconda anaconda-client conda-build -y && \\
+                conda install anaconda anaconda-client conda-build -y && \\
+                conda update conda -y && \\
+                conda update anaconda anaconda-client conda-build -y && \\
                 conda config --add channels conda-forge
                 """
-
-    runCommand "sudo chown -R jenkins:jenkins /home/jenkins/miniconda/pkgs"
 
     environmentVariable("HIVE_HOME", "/usr/hdp/2.2.9.0-3393/hive")
     runCommand "pip install awscli --upgrade --user"
