--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -40,13 +40,13 @@ dependencies {
     compileOnly("org.scala-lang:scala-library:${scalaVersion}")
     compileOnly("org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}")
     compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
-    compileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
 
     testImplementation("org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}")
     testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
     testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
     testImplementation("junit:junit:4.11")
     testImplementation(project(path: ':sparkling-water-core', configuration: 'testArchives'))
+    testCompileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
 
     integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
     integTestImplementation("junit:junit:4.11")
