--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -41,19 +41,14 @@ dependencies {
     compileOnly("org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}")
     compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
-    testImplementation("org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}")
-    testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
-    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
-    testImplementation("junit:junit:4.11")
-    testImplementation(project(path: ':sparkling-water-core', configuration: 'testArchives'))
-
     integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
     integTestImplementation("junit:junit:4.11")
     integTestImplementation(project(path: ':sparkling-water-core', configuration: 'testArchives'))
     integTestImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
     integTestCompileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
-
+    scriptsTestCompileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
+    
     // Put Spark Assembly on runtime path
     integTestRuntimeOnly(fileTree(dir: new File((String) sparkHome, "jars/"), include: '*.jar'))
     scriptsTestRuntimeOnly(fileTree(dir: new File((String) sparkHome, "jars/"), include: '*.jar'))
