--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -4,10 +4,9 @@ apply from: "$rootDir/gradle/sparkTest.gradle"
 apply from: "$rootDir/gradle/utils.gradle"
 
 dependencies {
-    compileOnly "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-    compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-
-    compile "org.scala-lang:scala-compiler:${scalaVersion}"
+    compileOnly("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
 }
 
 defineStandardPublication().call()
