--- a/build.gradle
+++ b/build.gradle
@@ -14,13 +14,12 @@ buildscript {
 
     dependencies {
         classpath 'org.github.ngbinh.scalastyle:gradle-scalastyle-plugin_2.11:1.0.1'
-        classpath "com.bmuschko:gradle-docker-plugin:3.6.1"
-        classpath 'com.github.jengelman.gradle.plugins:shadow:5.0.0'
+        classpath "com.bmuschko:gradle-docker-plugin:6.1.3"
+        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
         classpath 'net.researchgate:gradle-release:2.6.0'
-        classpath 'com.netflix.nebula:gradle-lint-plugin:10.4.2'
-        classpath 'kr.motd.gradle:sphinx-gradle-plugin:2.2.3'
+        classpath 'kr.motd.gradle:sphinx-gradle-plugin:2.6.1'
         classpath 'ru.vyarus:gradle-use-python-plugin:1.2.0'
-        classpath 'com.github.jk1:gradle-license-report:1.7'
+        classpath 'com.github.jk1:gradle-license-report:1.13'
     }
 }
 
@@ -129,9 +128,6 @@ configure(allprojects) { project ->
     apply plugin: 'idea'
     apply plugin: 'eclipse'
     apply from: "$rootDir/gradle/artifacts.gradle"
-    apply plugin: 'nebula.lint'
-    gradleLint.rules = ['all-dependency']
-    gradleLint.alwaysRun = false // Run linter manually
     // Version of main components
     ext {
         scalaBaseVersion = project.findProperty('scalaBaseVersion') ?: defaultScalaBaseVersion
@@ -175,7 +171,7 @@ configure(subprojects) { project ->
 
         // Snapshot repository of H2O builds
         maven {
-            url "http://h2o-release.s3.amazonaws.com/h2o/master/$h2oBuild/maven/repo/"
+            url "https://h2o-release.s3.amazonaws.com/h2o/master/$h2oBuild/maven/repo/"
         }
         
         if (sparkVersion.endsWith("-SNAPSHOT")) {
