--- a/core/build.gradle
+++ b/core/build.gradle
@@ -25,126 +25,81 @@ jar {
 }
 
 dependencies {
-    compile project(':sparkling-water-utils')
-    compile("ai.h2o:h2o-ext-jython-cfunc:${h2oVersion}")
-
-    // Generic model support
-    compile("ai.h2o:h2o-genmodel:${h2oVersion}")
-    // H2O security
-    compile("ai.h2o:h2o-security:${h2oVersion}")
-    // H2O core
-    compile("ai.h2o:h2o-core:${h2oVersion}") {
+    api(project(':sparkling-water-utils'))
+    api(project(':sparkling-water-repl'))
+    api("ai.h2o:h2o-ext-jython-cfunc:${h2oVersion}")
+    api("ai.h2o:h2o-genmodel:${h2oVersion}")
+    api("ai.h2o:h2o-security:${h2oVersion}")
+    api("ai.h2o:h2o-core:${h2oVersion}") {
         //
         // Exclude all dependencies provided by Spark environment already
         // The motivation is to catch error at compile time
         exclude(group: "net.java.dev.jets3t", module: "jets3t")
         exclude(group: "commons-collections", module: "commons-collections")
     }
-    compile "ai.h2o:h2o-security:${h2oVersion}"
-
-    // H2O Native Hive Support
-    compile "ai.h2o:h2o-hive:${h2oVersion}"
-    // H2O algorithms
-    compile "ai.h2o:h2o-algos:${h2oVersion}"
-    // H2O web
-    compile "ai.h2o:h2o-web:${h2oVersion}"
-    // H2O Avro parser support
-    compile("ai.h2o:h2o-avro-parser:${h2oVersion}") {
+    api("ai.h2o:h2o-security:${h2oVersion}")
+    api("ai.h2o:h2o-hive:${h2oVersion}")
+    api("ai.h2o:h2o-algos:${h2oVersion}")
+    api("ai.h2o:h2o-web:${h2oVersion}")
+    api("ai.h2o:h2o-avro-parser:${h2oVersion}") {
         exclude group: 'org.apache.avro', module: 'avro'
         exclude group: 'ai.h2o', module: 'h2o-core'
     }
-
-    // H2O XGBoost
-    compile "ai.h2o:h2o-ext-xgboost:${h2oVersion}"
-    compile "ai.h2o:h2o-genmodel-ext-xgboost:${h2oVersion}"
-
-    // H2O Parquet parser support
-    compile("ai.h2o:h2o-parquet-parser:${h2oVersion}") {
+    api("ai.h2o:h2o-ext-xgboost:${h2oVersion}")
+    api("ai.h2o:h2o-genmodel-ext-xgboost:${h2oVersion}")
+    api("ai.h2o:h2o-parquet-parser:${h2oVersion}") {
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'ai.h2o', module: 'h2o-persist-hdfs'
         exclude group: 'ai.h2o', module: 'h2o-core'
         exclude group: 'org.apache.parquet', module: 'parquet-hadoop'
     }
-    // H2O Orc  parser support
-    compile("ai.h2o:h2o-orc-parser:${h2oVersion}") {
+    api("ai.h2o:h2o-orc-parser:${h2oVersion}") {
         exclude group: 'org.apache.hive', module: 'hive-exec'
         exclude group: 'org.apache.hadoop', module: 'hadoop-common'
         exclude group: 'ai.h2o', module: 'h2o-persist-hdfs'
         exclude group: 'ai.h2o', module: 'h2o-core'
     }
-    // H2O Scala API
-    compile "ai.h2o:h2o-scala_${scalaBaseVersion}:${h2oVersion}"
-    // H2O HDFS Persistent layer
-    compile("ai.h2o:h2o-persist-hdfs:${h2oVersion}") {
+    api("ai.h2o:h2o-scala_${scalaBaseVersion}:${h2oVersion}")
+    api("ai.h2o:h2o-persist-hdfs:${h2oVersion}") {
         // Cannot use here: transitive = false since Gradle is producing wrong POM file
         // Hence the exlusions are listed manually
         exclude(group: "org.apache.hadoop", module: "hadoop-client")
         exclude(group: "org.apache.hadoop", module: "hadoop-hdfs-client")
         exclude(group: "org.apache.hadoop", module: "hadoop-aws")
     }
-    // H2O S3 persistance support
-    compile("ai.h2o:h2o-persist-s3:${h2oVersion}") {
+    api("ai.h2o:h2o-persist-s3:${h2oVersion}") {
         exclude(group: "com.fasterxml.jackson.core")
     }
+    api("ai.h2o:h2o-persist-gcs:${h2oVersion}")
+    api("ai.h2o:h2o-jetty-9:${h2oVersion}")
+    api("ai.h2o:h2o-webserver-iface:${h2oVersion}")
+    api("ai.h2o:h2o-automl:${h2oVersion}")
 
-    compile("ai.h2o:h2o-persist-gcs:${h2oVersion}")
+    compileOnly(project(':sparkling-water-macros'))
+    compileOnly("org.scala-lang:scala-library:${scalaVersion}")
+    compileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
+    compileOnly("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
+    testImplementation("org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
+    testImplementation(project(':sparkling-water-macros'))
+    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    testImplementation("junit:junit:4.11")
+    testImplementation(project(":sparkling-water-extension-stack-trace"))
 
-    // H2O Jetty support
-    compile("ai.h2o:h2o-jetty-9:${h2oVersion}")
-    compile("ai.h2o:h2o-webserver-iface:${h2oVersion}")
-
-    // H2O AutoML
-    compile "ai.h2o:h2o-automl:${h2oVersion}"
-
-    // Sparkling Water REPL
-    compile project(':sparkling-water-repl')
-    compileOnly project(':sparkling-water-macros')
-
-    // Add joda optional convert library which is required in Scala environment
-    compile "org.joda:joda-convert:1.7"
-
-    // And Scala library
-    compile "org.scala-lang:scala-library:${scalaVersion}"
-    compile "org.scala-lang:scala-compiler:${scalaVersion}"
-
-
-    // TEST DEPENDENCIES
-
-    // Spark components
-    // - core
-    compileOnly "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-
-    // - SQL component
-    compileOnly "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-
-    // - MLLib component
-    compileOnly "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-    testCompile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-
-    testCompile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
-
-    testCompile project(':sparkling-water-macros')
-
-    // And use scalatest for Scala testing
-    testCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    testCompile "junit:junit:4.11"
-    testCompile(project(":sparkling-water-extension-stack-trace"))
-
-    // Integration tests requirements
-    integTestCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    integTestCompile "junit:junit:4.11"
-    integTestCompile(project(":sparkling-water-extension-stack-trace"))
-
-    // Requirements of benchmarks
-    benchCompile "org.scalatest:scalatest_${scalaBaseVersion}:2.2.1"
-    benchCompile "junit:junit:4.11"
+    integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    integTestImplementation("junit:junit:4.11")
+    integTestImplementation(project(":sparkling-water-extension-stack-trace"))
+    benchImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    benchImplementation("junit:junit:4.11")
 
     // Put Spark Assembly on runtime path
-    integTestRuntime fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
-    benchRuntime fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar')
+    integTestRuntimeOnly(fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar'))
+    benchRuntimeOnly(fileTree(dir: new File((String) sparkHome, "lib/"), include: '*.jar'))
 }
 
 task createSparkVersionFile {
