--- a/assembly/build.gradle
+++ b/assembly/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
-apply from: "$rootDir/gradle/shadowRuntime.gradle"
 apply plugin: 'com.github.jk1.dependency-license-report'
+apply plugin: 'java-library'
 
 import com.github.jk1.license.filter.*
 
@@ -9,17 +9,41 @@ description = "Sparkling Water Assembly"
 
 
 dependencies {
-    // Sparkling Water libraries
-    compile project(":sparkling-water-ml")
-    compile project(":sparkling-water-repl")
-    compile(project(":sparkling-water-core"))
-    compile(project(":sparkling-water-extensions"))
+    api(project(":sparkling-water-ml"))
+    api(project(":sparkling-water-repl"))
+    api(project(":sparkling-water-core"))
+    api(project(":sparkling-water-extensions"))
+}
 
-    // Spark libraries
-    compile "org.apache.spark:spark-core_${scalaBaseVersion}:${sparkVersion}"
-    compile "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-    compile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
-    compile "org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}"
+//
+// Contains runtime configuration for Sparkling Water fat jar. This configuration transitively removes dependencies provided by
+// Apache Spark or the Hadoop ecosystem.
+//
+configurations {
+    shadowApi {
+        extendsFrom api
+        exclude group: 'org.apache.spark'
+        exclude group: 'org.apache.hadoop'
+        exclude group: 'org.scala-lang'
+        exclude group: "javax.servlet", module: "servlet-api"
+        exclude group: 'org.apache.commons', module: 'commons-math3' // a dependency of org.apache.spark:spark-core_2.11
+        exclude group: 'org.codehaus.jackson', module: 'jackson-core-asl'
+        // a dependency of org.apache.spark:spark-core_2.11
+        exclude group: 'commons-codec', module: 'commons-codec' // a dependency of org.apache.spark:spark-sql_2.11
+        exclude group: 'commons-lang', module: 'commons-lang' // a dependency of org.apache.spark:spark-core_2.11
+        exclude group: 'commons-io', module: 'commons-io' // a dependency of org.apache.spark:spark-core_2.11
+        exclude group: 'commons-logging', module: 'commons-logging' // a dependency of org.apache.hadoop:hadoop-auth
+        exclude group: 'log4j', module: 'log4j' // a dependency of org.apache.hadoop:hadoop-auth
+        exclude group: 'com.google.protobuf' // a dependency of org.apache.hadoop:hadoop-common
+        exclude group: 'com.fasterxml.jackson.core', module: 'jackson-core'
+        // a dependency of org.apache.spark:spark-sql_2.11
+        exclude group: 'org.apache.httpcomponents' // a dependency of org.apache.hadoop:hadoop-auth
+        exclude group: 'com.github.rwl', module: 'jtransforms' // a dependency of org.apache.spark:spark-mllib
+        exclude group: 'com.google.code.findbugs', module: 'jsr305' // a dependency of org.apache.hadoop:hadoop-common
+        exclude group: 'javax.xml.bind', module: 'jaxb-api' // a dependency of org.apache.hadoop:hadoop-yarn-common
+        exclude group: 'net.sourceforge.f2j', module: 'arpack_combined_all'
+        // a dependency of org.apache.spark:spark-graphx_2.11
+    }
 }
 
 jar {
@@ -28,8 +52,7 @@ jar {
 }
 
 shadowJar {
-    configurations = [project.configurations.shadowRuntime]
-
+    configurations = [project.configurations.shadowApi]
     mergeServiceFiles()
 
     relocate 'javassist', 'ai.h2o.javassist'
@@ -49,7 +72,7 @@ licenseReport {
 }
 
 artifacts {
-    compile shadowJar
+    api shadowJar
 }
 
 shadowJar.dependsOn generateLicenseReport
