--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -1,15 +1,20 @@
 description = "Sparkling Water Benchmarks"
 
 apply from: "$rootDir/gradle/utils.gradle"
+apply plugin: 'java-library'
+
+configurations {
+    sparklingWaterAssemblyJar
+}
 
 dependencies {
-    // Sparkling Water libraries
-    compile project(":sparkling-water-ml")
-    compile project(":sparkling-water-core")
+    sparklingWaterAssemblyJar(project(path: ':sparkling-water-assembly', configuration: 'shadow'))
 
-    // Spark libraries
-    compile "org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}"
-    compile "org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}"
+    api(project(":sparkling-water-ml"))
+    api(project(":sparkling-water-core"))
+
+    compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 }
 
 task cleanTerraform(type: Delete) {
@@ -42,7 +47,7 @@ task substituteTerraform(dependsOn: copyTerraform) {
         tfScripts.each { path ->
             def contents = file(path).getText('UTF-8')
             contents = contents
-                .replaceAll("SUBST_PACKAGE_FILE", "${project.rootDir}/assembly/build/libs/sparkling-water-assembly_$scalaBaseVersion-${version}-all.jar")
+                .replaceAll("SUBST_PACKAGE_FILE", "${configurations.sparklingWaterAssemblyJar.singleFile}")
                 .replaceAll("SUBST_BENCHMARKS_FILE", "$buildDir/libs/sparkling-water-benchmarks_$scalaBaseVersion-${version}.jar")
                 .replaceAll("SUBST_H2O_VERSION_NAME", h2oMajorName)
                 .replaceAll("SUBST_H2O_VERSION", h2oVersion)
