--- a/jenkins/build.gradle
+++ b/jenkins/build.gradle
@@ -50,7 +50,7 @@ task createDockerfile(type: Dockerfile) {
                 cd /home/jenkins && \\
                 git clone https://github.com/h2oai/sparkling-water.git && \\
                 cd sparkling-water && \\
-                ./gradlew build testClasses resolveTestRuntimeDependencies -PtestMojoPipeline=true -x check -x :sparkling-water-r:build -x :sparkling-water-py:build && \\
+                ./gradlew --refresh-dependencies resolveDependencies && \\
                 cd ..
                 """
 
