--- a/benchmarks/build.gradle
+++ b/benchmarks/build.gradle
@@ -11,6 +11,9 @@ dependencies {
     api(project(":sparkling-water-core")) {
         exclude group: "javax.servlet", module: "servlet-api"
     }
+    
+    compileOnly("org.apache.spark:spark-sql_${scalaBaseVersion}:${sparkVersion}")
+    compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 }
 
 shadowJar {
