--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -41,14 +41,14 @@ dependencies {
     compileOnly("org.apache.spark:spark-streaming_${scalaBaseVersion}:${sparkVersion}")
     compileOnly("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
 
-    integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    integTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
     integTestImplementation("junit:junit:4.11")
     integTestImplementation(project(path: ':sparkling-water-core', configuration: 'testArchives'))
     integTestImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
     integTestCompileOnly("org.scala-lang:scala-compiler:${scalaVersion}")
     integTestRuntimeOnly(fileTree(dir: new File((String) sparkHome, "jars/"), include: '*.jar'))
 
-    scriptsTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    scriptsTestImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
     scriptsTestImplementation("junit:junit:4.11")
     scriptsTestImplementation(project(path: ':sparkling-water-core', configuration: 'testArchives'))
     scriptsTestImplementation("org.apache.spark:spark-mllib_${scalaBaseVersion}:${sparkVersion}")
