--- a/ml/build.gradle
+++ b/ml/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
     testImplementation("ai.h2o:mojo2-runtime-api:${mojoPipelineVersion}")
     testImplementation("ai.h2o:mojo2-runtime-impl:${mojoPipelineVersion}")
-    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
     testImplementation("junit:junit:4.11")
     testImplementation(project(path: ':sparkling-water-core', configuration: 'testArchives'))
     // For test purposes, force newer client as the tests are modifying classpath and we get errors which
