--- a/repl/build.gradle
+++ b/repl/build.gradle
@@ -16,7 +16,7 @@ dependencies {
     compileOnly("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
 
     testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
-    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:2.2.1")
+    testImplementation("org.scalatest:scalatest_${scalaBaseVersion}:${scalaTestVersion}")
     testImplementation("junit:junit:4.11")
 }
 
