[SW-1969] Respect SparkSession of a current environment (#1860)
(cherry picked from commit 626c986fca61d0e3be6050cad0dadcacebf9828e)

--- a/repl/build.gradle
+++ b/repl/build.gradle
@@ -11,6 +11,7 @@ sourceSets {
 }
 
 dependencies {
+    api(project(":sparkling-water-utils"))
     compileOnly("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
 
     testImplementation("org.apache.spark:spark-repl_${scalaBaseVersion}:${sparkVersion}")
