[SW-1983] Publish extensions to maven central

--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ ext {
             project(':sparkling-water-package'),
             project(":sparkling-water-doc"),
             project(':sparkling-water-utils'),
-            project(':sparkling-water-scoring')
+            project(':sparkling-water-scoring'),
+            project(':sparkling-water-extensions')
     ]
     // Projects with integration tests
     integTestProjects = [
