--- a/gradle/utils.gradle
+++ b/gradle/utils.gradle
@@ -104,19 +104,15 @@ def getSparkSpecificResourceDir(sparkMajorVersion) {
 }
 
 def buildingAgainstMasterOrRel() {
-    if (project.hasProperty("buildAgainstH2OBranch")) {
-        def h2oBranch = project.property("buildAgainstH2OBranch")
-        return h2oBranch == "master" || h2oBranch == "rel-${h2oMajorName}"
-    } else {
-        return false
-    }
+    def h2oBranch = project.property("buildAgainstH2OBranch")
+    return h2oBranch == "master" || h2oBranch == "rel-${h2oMajorName}"
 }
 
 def getS3Path() {
     def branch = getGitBranch()
     def formattedSWBranch = branch.replaceAll("/", "-")
     String path
-    if (!buildingAgainstMasterOrRel()) {
+    if (project.hasProperty("buildAgainstH2OBranch") && !buildingAgainstMasterOrRel()) {
         def h2oBranch = project.property("buildAgainstH2OBranch")
         def formattedH2OBranch = h2oBranch.replaceAll("/", "-")
         path = "${formattedSWBranch}_${formattedH2OBranch}"
