--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # artifacts group
 group=ai.h2o
 # Major version of H2O release
-h2oMajorVersion=3.28.0
+h2oMajorVersion=3.28.1
 # Name of H2O major version
-h2oMajorName=yu
+h2oMajorName=yule
 # H2O Build version, defined here to be overriden by -P option
-h2oBuild=4
+h2oBuild=1
 # Scala version for Sparkling Water. By default, for 2.11 we use 2.11.12.
 scalaBaseVersion=2.11
 # Version of Mojo Pipeline library
