[SW-2065] Fix Deployment of Artifacts to Maven Central

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,9 @@ mojoPipelineVersion=2.3.0
 testMojoPipeline=false
 # Disable execution of the gradle daemon
 org.gradle.daemon=false
+# Disable generation of *.sha256 and *.sha512 files since it's incompatible with Maven Central
+# https://issues.sonatype.org/browse/MVNCENTRAL-5276
+systemProp.org.gradle.internal.publish.checksums.insecure=true
 # Version of Terraform used in the script creating the docker image
 terraformVersion=0.12.8
 # Version of docker image used in Jenkins tests
