--- a/py/build.gradle
+++ b/py/build.gradle
@@ -312,14 +312,14 @@ task testPythonMojoPipeline(type: PythonTask, dependsOn: distPython) {
     command = "tests/test_runner.py tests/unit/with_runtime_spark/test_mojo_pipeline.py"
 }
 
-task testPythonREST(type: PythonTask, dependsOn: distPython) {
+task testPythonExternal(type: PythonTask, dependsOn: distPython) {
     extraArgs(*createUnitTestArgs())
-    command = "tests/test_runner.py 'tests/unit/with_runtime_clientless_sparkling'"
+    command = "tests/test_runner.py 'tests/unit/with_runtime_sparkling_external'"
 }
 
 task testPython(type: PythonTask, dependsOn: distPython) {
     extraArgs(*createUnitTestArgs())
-    command = "tests/test_runner.py 'tests/unit --ignore=tests/unit/with_runtime_spark/test_mojo_pipeline.py --ignore=tests/unit/with_runtime_clientless_sparkling'"
+    command = "tests/test_runner.py 'tests/unit --ignore=tests/unit/with_runtime_spark/test_mojo_pipeline.py --ignore=tests/unit/with_runtime_sparkling_external'"
 }
 
 task hadoopSmokeTests(type: PythonTask, dependsOn: distPython) {
@@ -370,6 +370,6 @@ build.dependsOn distPython
 test.dependsOn testPython
 
 if (detectBackendClusterMode() == "external") {
-    test.dependsOn testPythonREST
+    test.dependsOn testPythonExternal
 }
 integTest.dependsOn integTestPython
