[SW-2095] Remove and replace remaining reference to H2O algo API by SW Algo API

--- a/gradle/itest.gradle
+++ b/gradle/itest.gradle
@@ -50,15 +50,17 @@ task integTest(type: Test) {
             systemProperty "spark.ext.h2o.node.log.dir", "h2ologs-itest-${testEnv}/nodes"
             systemProperty "spark.ext.h2o.client.log.dir", "h2ologs-itest-${testEnv}/client"
             systemProperty "spark.ext.h2o.external.disable.version.check", "true"
+            systemProperty "spark.ext.h2o.rest.api.based.client", "true"
 
             include "ai/h2o/sparkling/yarn/**"
             break
-        
+
         case "local":
             systemProperty "sparkling.test.environment", "${testEnv}"
             systemProperty "spark.ext.h2o.node.log.dir", new File(project.getBuildDir(), "h2ologs-itest-${testEnv}/nodes")
             systemProperty "spark.ext.h2o.client.log.dir", new File(project.getBuildDir(), "h2ologs-itest-${testEnv}/client")
             systemProperty "spark.ext.h2o.external.disable.version.check", "true"
+            systemProperty "spark.ext.h2o.rest.api.based.client", "true"
 
             include "ai/h2o/sparkling/local/**"
             break
