--- a/gradle/sparkTest.gradle
+++ b/gradle/sparkTest.gradle
@@ -7,6 +7,7 @@ test {
     systemProperty "spark.ext.h2o.node.log.dir", new File(project.getBuildDir(), "h2ologs-test/nodes")
     systemProperty "spark.ext.h2o.client.log.dir", new File(project.getBuildDir(), "h2ologs-test/client")
     systemProperty "spark.ext.h2o.external.disable.version.check", "true"
+    systemProperty "spark.ext.h2o.rest.api.based.client", "true"
     // Run with assertions ON
     enableAssertions = true
 
